--- a/config.ini
+++ b/config.ini
@@ -1,2 +1,3 @@
 [Default]
-DustforcePath = /home/alex/.local/share/Steam/steamapps/common/Dustforce
+DustforcePath = C:\Program Files (x86)\Steam\steamapps\common\Dustforce
+# DustforcePath = /home/user/.local/share/Steam/steamapps/common/Dustforce
