Update requirements and remove package data

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = dusted
-version = 1.0.1
+version = 1.0.2
 url = https://github.com/AlexMorson/dustforce-tas-editor
 author = Alex Morson
 author_email = alexmorson@btinternet.com
@@ -13,18 +13,16 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 
 [options]
-zip_safe = False
+zip_safe = True
 install_requires =
-    requests
+    appdirs
     dustmaker
+    requests
 packages =
     dusted
     dusted.dustforce
     dusted.geom
     dusted.replay
-
-[options.package_data]
-dusted = config.ini
 
 [options.entry_points]
 gui_scripts =
