Update dustmaker version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = dusted
-version = 1.1.1
-url = https://github.com/AlexMorson/dustforce-tas-editor
+version = 1.2.0
+url = https://github.com/AlexMorson/dusted
 author = Alex Morson
 author_email = alexmorson@btinternet.com
 classifiers =
@@ -15,9 +15,9 @@ long_description_content_type = text/markdown
 [options]
 zip_safe = True
 install_requires =
-    appdirs
-    dustmaker
-    requests
+    appdirs ~= 1.4.4
+    dustmaker ~= 1.1.0
+    requests ~= 2.22
 packages =
     dusted
     dusted.dustforce
