--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,27 @@
+[project]
+name = "dusted"
+version = "1.3.0"
+description = "Dustforce replay editor"
+authors = [ { name = "Alex Morson", email = "alexmorson@btinternet.com" } ]
+readme = "README.md"
+license = "MIT"
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+]
+requires-python = ">=3.10"
+dependencies = [
+    "appdirs>=1.4.4",
+    "dustmaker>=1.2.0",
+    "requests>=2.32.5",
+]
+
+[project.urls]
+source = "https://github.com/alexmorson/dusted"
+
+[project.gui-scripts]
+dusted = "dusted.__main__:main"
+
 [build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = [ "uv_build>=0.9.11,<0.10.0" ]
+build-backend = "uv_build"
