Capitalise project url key
This shows up as written on PyPI.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
 ]
 
 [project.urls]
-source = "https://github.com/alexmorson/dusted"
+Source = "https://github.com/alexmorson/dusted"
 
 [project.gui-scripts]
 dusted = "dusted.__main__:main"
