--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,8 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
-    "appdirs>=1.4.4",
     "dustmaker>=1.2.0",
+    "platformdirs>=4.5.1",
     "requests>=2.32.5",
 ]
 
