--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,8 @@ dusted = "dusted.__main__:main"
 [build-system]
 requires = [ "uv_build>=0.9.11,<0.10.0" ]
 build-backend = "uv_build"
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.8",
+]
