--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,7 @@ dev = [
     "ruff>=0.14.8",
     "types-requests>=2.32.4.20250913",
 ]
+
+[tool.ruff]
+lint.select = ["E", "F", "I", "UP"]
+lint.ignore = ["E501"]
